# XaiClient2.0

./: Todo.txt  gradle.properties  imgui.ini
Overlay/: CMakeLists.txt  build_overlay.bat  config.ini  imgui.ini
Overlay/src/: ClickGUI.cpp  ClickGUI.h  MathUtils.h  Module.h  TextureManager.cpp  TextureManager.h  main.cpp  network.h
Overlay/src/modules/: BlockESP.cpp  BlockESP.h  Disable.h  ESP.cpp  ESP.h  Friends.h  Nametags.h  PlayerESP.h
Overlay/src/utils/: DataLists.h  IconLoader.cpp  IconLoader.h
src/main/java/xai/client/: Xaiclient.java  XaiclientClient.java
src/main/java/xai/client/backend/: SocketServer.java
src/main/java/xai/client/mixin/: ExampleMixin.java  MixinClientPacketListener.java
src/main/java/xai/client/module/: BlockESP.java  ESP.java  Nametags.java
src/main/resources/: fabric.mod.json  xaiclient.mixins.json
